--- a/templates/rates.html
+++ b/templates/rates.html
@@ -15,6 +15,15 @@
   <link rel="icon" href="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png">
   <meta name="theme-color" content="#7952b3">
   <!-- Facebook -->
+
+
+    <style>
+      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
+
+      body {
+          font-family: SF
+    }
+    </style>
   <style>
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -30,47 +39,49 @@
             font-size: 3.5rem;
           }
         }
+
+       .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,199, 8, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        }
+
+      .nav-link {
+            color: #ffc708
+        }
+
+
   </style>
 </head>
 
 <body>
 
-  <nav class="navbar fixed-top navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Pear Investing</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+ <nav class="navbar navbar" style="background: #060424">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="home.html" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="border: 3px solid #ffc708">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExample01">
-          <ul class="navbar-nav mr-auto mb-2">
-            <li class="nav-item active">
-              <a class="nav-link" href="home.html">Главная</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="rates.html">Тарифы</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">Выпадающий список</a>
-              <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form>
-            <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
-          </form>
-        </div>
-      </div>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarsExample01">
+      <ul class="navbar-nav mr-auto mb-2">
+        <li class="nav-item active">
+          <a class="nav-link" aria-current="page" href="home.html">Главная</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="rates.html">Тарифы</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="companies_list.html">Компании</a>
+        </li>
+      </ul>
+      <form>
+        <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
+      </form>
+    </div>
+  </div>
+</nav>
 
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Ценообразование</h1>
+    <h1 class="display-4">Тарифы</h1>
     <p class="lead">Мы готовы предложить Вам несколько стратегий в зависимости от Ваших целейи возможностей.</p>
   </div>
 
@@ -85,10 +96,11 @@
           <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ мес.</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Чистый рандом</li>
-            <li>Никаких алгоритмов</li>
+            <li>Удача</li>
+            <li>Никаких гарантий</li>
             <li>Поддержка по e-mail</li>
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-outline-primary">Подпишитесь бесплатно</button>
+          <button type="button" class="btn btn-outline-warning">Подпишитесь бесплатно</button>
         </div>
       </div>
       </div>
@@ -105,7 +117,7 @@
             <li>Приоритетная поддержка по e-mail</li>
             <li>Доступ к справочному центру</li>
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Начать</button>
+          <button type="button" class="btn btn-outline-warning">Начать</button>
         </div>
       </div>
       </div>
@@ -122,7 +134,7 @@
             <li>Поддержка по телефону и e-mail</li>
             <li>Доступ к справочному центру</li>
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Связаться с нами</button>
+          <button type="button" class="btn btn-outline-warning">Связаться с нами</button>
         </div>
       </div>
       </div>
@@ -132,7 +144,7 @@
       <div class="row">
         <div class="col-12 col-md">
           <img class="mb-2" src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" alt="логотип bootstrap" width="24" height="24">
-          <small class="d-block mb-3 text-muted">&copy; 2024 Pear Investing</small>
+          <small class="d-block mb-3 text-muted">&copy; 2024 Л2Ш</small>
         </div>
         <div class="col-6 col-md">
           <h5>Особенности</h5>
@@ -165,7 +177,6 @@
     </footer>
   </div><script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179173139-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
@@ -173,7 +184,6 @@
 
     gtag('config', 'UA-179173139-1');
   </script>
-  <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){ m[i]=m[i]||function(){ (m[i].a=m[i].a||[]).push(arguments) }; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(67718821, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/67718821" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
