--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,15 @@
     <link rel="icon" href="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png">
     <meta name="theme-color" content="#7952b3">
 <!-- Facebook -->
+
+
+      <style>
+      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
+
+      body {
+          font-family: SF
+    }
+    </style>
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -44,6 +53,7 @@
           padding-top: 40px;
           padding-bottom: 40px;
           background-color: #f5f5f5;
+          font-family: Izhitsa
         }
 
         .form-signin {
@@ -83,50 +93,72 @@
           margin-bottom: 20px;
         }
 
+        .nav-link {
+            color: #ffc708
+        }
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,199, 8, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        }
+        .collapse {
+        &:not(.show) {
+        display: none;
+         }
+        }
 
+        .collapsing {
+        height: 0;
+        overflow: hidden;
+        @include transition($transition-collapse);
+        }
+        .mb-4 {
+        display: block;
+        margin-left: auto;
+        margin-right: auto }
+
+
+        body {
+          background-image: url("https://cdn.mos.cms.futurecdn.net/f746gxB9euy6hRsnMdsqaF-1024-80.jpg.webp");
+          background-size: cover;
+          background-repeat: no-repeat;
+        }
     </style>
+
+
+
 </head>
 
 
-<body class="text-center">
-    <nav class="navbar fixed-top navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Pear Investing</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+<body>
 
-        <div class="collapse navbar-collapse" id="navbarsExample01">
-          <ul class="navbar-nav mr-auto mb-2">
-            <li class="nav-item active">
-              <a class="nav-link" href="home.html">Главная</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="rates.html">Тарифы</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">Выпадающий список</a>
-              <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form>
-            <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
-          </form>
-        </div>
-      </div>
+    <nav class="navbar fixed-top" style="background: #060424">
+      <div class="container-fluid">
+    <a class="navbar-brand" href="home.html" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="border: 3px solid #ffc708" >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExample01">
+      <ul class="navbar-nav mr-auto mb-2">
+        <li class="nav-item active">
+          <a class="nav-link" aria-current="page" href="home.html">Главная</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="rates.html">Тарифы</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="companies_list.html">Компании</a>
+        </li>
+      </ul>
+      <form>
+        <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
+      </form>
+    </div>
+  </div>
     </nav>
 
-
     <form class="form-signin">
-      <img class="mb-4" src="/img/brand/bootstrap-solid.svg" alt="логотип bootstrap" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Пожалуйста войдите</h1>
+      <img class="mb-4" src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal" align="center">Пожалуйста войдите</h1>
       <label for="inputEmail" class="sr-only">Email</label>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
       <label for="inputPassword" class="sr-only">Пароль</label>
@@ -137,7 +169,7 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2024 Pear Investing</p>
+      <p class="mt-5 mb-3 text-muted">&copy; 2024 Л2Ш</p>
     </form><script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script>
