--- a/templates/rates.html
+++ b/templates/rates.html
@@ -18,8 +18,6 @@
 
 
     <style>
-      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
-
       body {
           font-family: SF
     }
@@ -56,7 +54,7 @@
 
  <nav class="navbar navbar" style="background: #060424">
   <div class="container-fluid">
-    <a class="navbar-brand" href="home.html" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
+    <a class="navbar-brand" href="home" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="border: 3px solid #ffc708">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -64,13 +62,13 @@
     <div class="collapse navbar-collapse" id="navbarsExample01">
       <ul class="navbar-nav mr-auto mb-2">
         <li class="nav-item active">
-          <a class="nav-link" aria-current="page" href="home.html">Главная</a>
+          <a class="nav-link" aria-current="page" href="home">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rates.html">Тарифы</a>
+          <a class="nav-link" href="rates">Тарифы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="companies_list.html">Компании</a>
+          <a class="nav-link" href="companies_list">Компании</a>
         </li>
       </ul>
       <form>
