--- a/templates/company.html
+++ b/templates/company.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Компания || { {name }}</title>
+<title>Компания || {{ name }}</title>
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 <link rel="stylesheet" href="https://bootstrap5.ru/css/docs.css">
@@ -19,8 +19,6 @@
 <!-- Facebook -->
 
       <style>
-      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
-
       body {
           font-family: SF
     }
@@ -54,7 +52,7 @@
 <body>
 <nav class="navbar navbar" style="background: #060424">
   <div class="container-fluid">
-    <a class="navbar-brand" href="home.html" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
+    <a class="navbar-brand" href="home" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="border: 3px solid #ffc708">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -62,13 +60,13 @@
     <div class="collapse navbar-collapse" id="navbarsExample01">
       <ul class="navbar-nav mr-auto mb-2">
         <li class="nav-item active">
-          <a class="nav-link" aria-current="page" href="home.html">Главная</a>
+          <a class="nav-link" aria-current="page" href="../home">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rates.html">Тарифы</a>
+          <a class="nav-link" href="../rates">Тарифы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="companies_list.html">Компании</a>
+          <a class="nav-link" href="../companies_list">Компании</a>
         </li>
       </ul>
       <form>
@@ -170,25 +168,29 @@
         </div>
       </div>
 
+      <div>
+        <h2>Описание</h2>
+        <p>
+          {{ description }}
+        </p>
+      </div>
+
+
+      <div>
+        <h2>Графики</h2>
       <head>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
           google.charts.load('current', {'packages':['corechart']});
           google.charts.setOnLoadCallback(drawChart);
 
+
       function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Mon', 20, 28, 38, 45],
-          ['Tue', 31, 38, 55, 66],
-          ['Wed', 50, 55, 77, 80],
-          ['Thu', 77, 77, 66, 50],
-          ['Fri', 68, 66, 22, 15],
-          ['what', 24, 41, 42, 21]
-          // Treat first row as data as well.
-        ], true);
+        var arr = {{candle_stocks | tojson}};
+        var data = google.visualization.arrayToDataTable(arr, true);
 
         var options = {
-          legend:'none'
+          title: 'Свечной график',
         };
 
         var chart = new google.visualization.CandlestickChart(document.getElementById('chart_div'));
@@ -198,7 +200,7 @@
         </script>
       </head>
       <body>
-        <div id="chart_div" style="width: 900px; height: 500px;"></div>
+        <div id="chart_div" style="width: 1280px; height: 720px;"></div>
       </body>
 
 
@@ -209,17 +211,11 @@
       google.charts.setOnLoadCallback(drawChart);
 
       function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Время', 'Цена'],
-          ['2004',  1000],
-          ['2005',  1170],
-          ['2006',  660],
-          ['2007',  1030]
-        ]);
+      var arr = {{point_stocks | tojson}};
+        var data = google.visualization.arrayToDataTable(arr, true);
 
         var options = {
-          title: 'Company Performance',
-          legend: { position: 'bottom' }
+          title: 'Линейный график',
         };
 
         var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
@@ -229,26 +225,33 @@
     </script>
   </head>
   <body>
-    <div id="curve_chart" style="width: 900px; height: 500px"></div>
+    <div id="curve_chart" style="width: 1280px; height: 720px"></div>
   </body>
+      </div>
 
 
 
+  <h2>Прогноз</h2>
+  <div>
+    <h4>Текущая стоимость: {{ current_price }} $</h4>
+    <h4>Потенциальная стоимость: {{ future_price }} $</h4>
+    <h4>Потенциальная прибыль: {{ difference }} $</h4>
+  </div>
 
-      <h2>Цены</h2>
+      <h2>Календарь стоимости акции</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
             <tr>
               <th>Date</th>
-              <th>Min</th>
-              <th>Max</th>
+              <th>Low</th>
               <th>Open</th>
               <th>Close</th>
+              <th>High</th>
             </tr>
           </thead>
          <tbody>
-            {% for row in ticker %}
+            {% for row in candle_stocks %}
             <tr>
                 <td> {{ row[0] }} </td>
                 <td> {{ row[1] }} </td>
