--- a/templates/home.html
+++ b/templates/home.html
@@ -18,8 +18,6 @@
 
 
   <style>
-      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
-
       body {
           font-family: SF
     }
@@ -121,10 +119,10 @@
 
       <h3 class="float-md-left mb-0" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</h3>
       <nav class="nav nav-masthead justify-content-center float-md-right">
-        <a class="nav-link active" aria-current="page" style="color: #ffc708" href="home.html">Главная</a>
-        <a class="nav-link" style="color: #ffc708" href="rates.html">Тарифы</a>
-        <a class="nav-link" style="color: #ffc708" href="companies_list.html">Компании</a>
-        <a class="nav-link" style="color: #ffc708" href="login.html">Войти</a>
+        <a class="nav-link active" aria-current="page" style="color: #ffc708" href="home">Главная</a>
+        <a class="nav-link" style="color: #ffc708" href="rates">Тарифы</a>
+        <a class="nav-link" style="color: #ffc708" href="companies_list">Компании</a>
+        <a class="nav-link" style="color: #ffc708" href="login">Войти</a>
       </nav>
     </div>
   </header>
@@ -135,7 +133,7 @@
     <p class="lead">Наша цель - облегчить Ваше существование в этом тяжелом мире.</p>
 
     <p class="lead">
-      <a href="companies_list.html" class="btn btn-outline-warning">Подробнее</a>
+      <a href="companies_list" class="btn btn-outline-warning">Подробнее</a>
     </p>
   </main>
 
